Add Makefile for non XCode users
Also fix some warnings about const integers/bools;
use stringstreams for integers/strings conversions;
update .gitignore to ignore objects and dependencies files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /macg/
 /MacGPusher.xcodeproj/project.xcworkspace/xcuserdata/nyxouf.xcuserdatad/UserInterfaceState.xcuserstate
 /.DS_Store
+
+MacGPusher
+
+*.o
+*.d
+
+*~
